--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
 name: First workflow
 
-on: push
+on: 
+  push:
 
 jobs: 
   build:
-    run-ons: ubuntu-latest
+    runs-on: ubuntu-latest  # Fixed: 'run-ons' → 'runs-on'
 
     steps:
-     - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-     - name: Run a sample github action
-       run: echo "this workflow runs successfully for theis particular action"
+      - name: Run a sample GitHub Action
+        run: echo "This workflow runs successfully for this particular action"
